[package]
name = "dharma"
version = "0.1.0"
authors = ["4@m"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.6"

[dependencies]
lalrpop-util = "0.19.6"
regex = "1"
